--- a/README.org
+++ b/README.org
@@ -1,8 +1,8 @@
-#+title: mouthpiecer-cli
+#+title: mouthpiecer-tui
 
 * About
 
-*mouthpiecer-cli* is a Python based command line interface to a [[https://www.knack.com][Knack]] database.
+*mouthpiecer-tui* is a Python based terminal user interface to a [[https://www.knack.com][Knack]] database.
 
 The Mouthpiecer Knack front end can be found here: [[https://aleksozolins.knack.com/mouthpiecer#home/]]
 
@@ -10,7 +10,7 @@ The Mouthpiecer Knack front end can be found here: [[https://aleksozolins.knack.
 - Users can also view the collections of other "mouthpiecers" and can arrange mouthpiece trades as well.
 - For now, some features have been removed from the front end and will be re-introduced as the cli develops.
 
-Ultimately, the cli should exactly mirror the feature-set of the web front end.
+Ultimately, the tui should exactly mirror the feature-set of the web front end.
 
 * Compatibility
 
@@ -22,15 +22,15 @@ Ultimately, the cli should exactly mirror the feature-set of the web front end.
 
 From the terminal:
 
-1. ~git clone https://github.com/aleksozolins/mouthpiecer-cli.git~
-2. ~cd mouthpiecer-cli~
+1. ~git clone https://github.com/aleksozolins/mouthpiecer-tui.git~
+2. ~cd mouthpiecer-tui~
 3. ~python3 -m venv .venv~
 4. ~source .venv/bin/activate~
 5. ~pip3 install -r requirements.txt~
 
 To run the program:
 
-~python3 mouthpiecer-cli.py~
+~python3 mouthpiecer.py~
 
 To exit the virtual environment after quitting
 
